refactored task_assignment and task_answer modules